# brunner-clsp-linux

./: .gitignore  CMakeLists.txt  README.md
doc/report descriptor/: CLSP_PIDparsed.txt  CLSP_original.txt
kernel_patch/: Kbuild  README.md  dkms.conf  hid-brunnerff.c  hid-ids.h
resource/etc/udev/rules.d/: 73-usb-brunner.rules
src/: clsp.cpp  clsp.hpp  main.cpp
